--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-slick": "^0.25.2",
     "redux": "^3.7.1",
-    "redux-thunk": "^2.2.0",
-    "slick-carousel": "^1.8.1"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
